syntax = "proto3";

package data;

message HistoricRequest {
    string Timezone = 1;
    string City = 2;
    int64 StartTime = 3;
    int64 FinishDate = 4;
    double GridSize = 5;
}

message EventRequest {
    string Timezone = 1;
    string City = 2;
    int64 StartTime = 3;
    int64 FinishDate = 4;
}